changes to css and changest to html sonsolidations

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -86,12 +86,14 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead,.benefit-brand,.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+/* benefit-cost and benefit-brand got consolidated
+
+/* .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -99,14 +101,16 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
-.benefit-lead h3 {
+.benefit-lead h3,.benefit-brand h3,.benefit-cost h3  {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+
+/* benefit-brand and benefit-cost got consolidated
+/* .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -114,15 +118,17 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
-.benefit-lead img {
+.benefit-lead img,.benefit-brand img,.benefit-cost img  {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
+
+/*  benefi-brand img and benefit-cost img got consolidated
+/* .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -132,9 +138,9 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
-.search-engine-optimization {
+.search-engine-optimization, .online-reputation-management,.social-media-marketing  {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,7 +149,8 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+/* online-reputation-management and social-media-marketing got consolidated */
+/* .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -159,26 +166,26 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+} */
 
-.search-engine-optimization img {
+.search-engine-optimization img, .online-reputation-management img,.social-media-marketing img  {
     max-height: 200px;
 }
-
-.online-reputation-management img {
+/* online-reputation-management img and social-media-marketing got consolidated */
+/* .online-reputation-management img {
     max-height: 200px;
 }
 
 .social-media-marketing img {
     max-height: 200px;
-}
+} */
 
-.search-engine-optimization h2 {
+.search-engine-optimization h2,.online-reputation-management h2,.social-media-marketing h2   {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.online-reputation-management h2 {
+/*  online-reputation-management and social-media-marketing got consolidated */
+/* .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -186,7 +193,7 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
